backend work started

--- a/frontent/package.json
+++ b/frontent/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23"
   },
