--- a/frontent/package.json
+++ b/frontent/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -18,7 +19,9 @@
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "react-multi-carousel": "^2.8.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
