--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.6.1",
     "@strapi/provider-upload-cloudinary": "^4.6.1",
     "@strapi/strapi": "4.6.1",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "stripe": "^11.14.0"
   },
   "author": {
     "name": "A Strapi developer"
