--- a/frontent/package.json
+++ b/frontent/package.json
@@ -23,7 +23,8 @@
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
